--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,13 @@
 // Top-level build file
 buildscript {
+    ext.kotlin_version = '1.9.24' // latest stable
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:8.3.2"
+        //classpath "com.android.tools.build:gradle:8.3.2"
+        classpath "com.android.tools.build:gradle:8.1.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.24"
     }
 }
