--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,14 @@ dependencies:
   path_provider: ^2.1.5
   url_launcher: ^6.3.2
   shared_preferences: ^2.5.3
+  pdf: ^3.10.7
+  printing: ^5.11.0
+  #file_saver: ^0.0.7+1
+  web: ^1.1.1
+  universal_html: ^2.0.8
+  share_plus: ^11.0.0
+
+
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
