--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,12 +31,13 @@
         </intent>
     </queries>
     <application
-        android:label="motor_insurance_app"
+        android:label="Easy Insurance Calculator (Motor)"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:label="Easy Insurance Calculator (Motor)"
             android:launchMode="singleTop"
             android:taskAffinity=""
             android:theme="@style/LaunchTheme"
