--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -76,6 +75,7 @@ flutter:
   assets:
     - assets/insurance.png
     - assets/fillerLogo.jpeg
+    - assets/logos/
     # - assets/insuranceIcon.png
     # - images/a_dot_ham.jpeg
 
