--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,15 @@ dependencies:
   shared_preferences: ^2.5.3
   pdf: ^3.10.7
   printing: ^5.11.0
-  #file_saver: ^0.0.7+1
   web: ^1.1.1
   universal_html: ^2.0.8
   share_plus: ^11.0.0
-
+  intl: ^0.20.2
+  firebase_core: ^4.0.0
+  #firebase_analytics: ^10.0.0
+  firebase_auth: ^6.0.1
+  cloud_firestore: ^6.0.0
+  flutter_secure_storage: ^9.2.4
 
 
 dev_dependencies:
