--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   firebase_auth: ^6.0.1
   cloud_firestore: ^6.0.0
   flutter_secure_storage: ^9.2.4
-
+  razorpay_flutter: ^1.4.0
 
 dev_dependencies:
   flutter_test:
