--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
   cloud_firestore: ^6.0.0
   flutter_secure_storage: ^9.2.4
   razorpay_flutter: ^1.4.0
+  animate_do: ^4.2.0
+  firebase_messaging: ^16.0.0
+  flutter_local_notifications: ^19.4.0
+  timezone: ^0.10.1
 
 dev_dependencies:
   flutter_test:
