--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -43,13 +43,13 @@
 
     <!-- ✅ All services and receivers must be placed inside <application> -->
     <application
-        android:label="Easy Insurance Calculator (Motor)"
+        android:label="AutoInsure"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="Easy Insurance Calculator (Motor)"
+            android:label="AutoInsure"
             android:launchMode="singleTop"
             android:taskAffinity=""
             android:theme="@style/LaunchTheme"
