--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,13 @@ dependencies:
   firebase_messaging: ^16.0.0
   flutter_local_notifications: ^19.4.0
   timezone: ^0.10.1
+  uuid: ^4.5.1
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
 
 dev_dependencies:
   flutter_test:
