--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,11 +59,21 @@ dependencies:
   timezone: ^0.10.1
   uuid: ^4.5.1
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.0.5
+  device_info_plus: ^11.5.0
+  permission_handler: ^12.0.1
 
 flutter_launcher_icons:
   android: true
   ios: true
   image_path: "assets/icon/app_icon.png"
+
+flutter_native_splash:
+  color: "#004aad"                # Background color
+  image: assets/icon/app_icon_label.png   # Your logo/image
+  android: true
+  ios: true
+
 
 dev_dependencies:
   flutter_test:
@@ -92,6 +102,7 @@ flutter:
     - assets/fillerLogo.jpeg
     - assets/logos/
     - assets/drawer/
+    - assets/icon/
     # - assets/insuranceIcon.png
     # - images/a_dot_ham.jpeg
 
