--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   flutter_native_splash: ^2.0.5
   device_info_plus: ^11.5.0
   permission_handler: ^12.0.1
+  app_settings: ^6.1.1
 
 flutter_launcher_icons:
   android: true
