--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   device_info_plus: ^11.5.0
   permission_handler: ^12.0.1
   app_settings: ^6.1.1
+  #flutter_config: ^2.0.2
 
 flutter_launcher_icons:
   android: true
